--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -3007,7 +3007,7 @@ Footnotes
   records. I think it is the kind of music I like, but executed in a way that I
   don't really care for. Too screamo for me.
 
-**Songs from Albums that Didn't Make my Lists**
+**Songs from Albums that Didn't Make my List**
 
 This is the decade with the most albums, and by far the most favorite songs.
 
@@ -3199,6 +3199,10 @@ This is the decade with the most albums, and by far the most favorite songs.
 - "Golden Phone" by **Micachu & The Shapes** - This band was going to be the
   next big thing, but they really only left us with this great little eccentric
   pop song.
+
+- "I can't Get You Out of My Head" by **Kylie Minogue** - I had a poster of the
+  cover to her 2001 album *Fever* on my wall in undergrad. I could never
+  convince anyone that it was because of my interest in the music contained within.
 
 - "Study War" by **Moby** - A cool little latter day song by this guy, but at
   this point he was mostly mining his own past.
