--- a/src/music/1999.rst
+++ b/src/music/1999.rst
@@ -45,7 +45,7 @@ I had been experimenting with MP3 downloads for the last year or so when
 high-speed internet all of a sudden made them way more practical. I remember
 sitting in the computer lab of Penn State Berks campus filling up a 100 MB zip
 disk a couple dozen tracks from Napster. Looking back, I wasn't really
-interested in pirating music, I just wanted a sample top make informed
+interested in pirating music, I just wanted a sample to make informed
 decisions. We were using Napster like we use Spotify today. Regardless, by 2003
 legal music downloads were finally a thing and I went completely legit. It isn't
 true of everyone, but I think the download era made me into the music consumer I
