cleanup and proofing after reorg

--- a/src/music/2000.rst
+++ b/src/music/2000.rst
@@ -65,7 +65,7 @@ current day that I really don't care for anymore.
 
 - *Tonight and the Rest of My Life* by **Nina Gordon** - I'm not sure why we
   only got one really good record from this artist, because it is really, really
-  good. **Gordon** has an great voice, and a rock sensibility that separates this
+  good. **Gordon** has a great voice, and a rock sensibility that separates this
   music from the other woman singer songwriters in this area. I really wish we
   had gotten way more of this. [*Memory*: This makes me think about how
   different music discovery was back in the day. I heard the title track off of
@@ -73,7 +73,7 @@ current day that I really don't care for anymore.
   enough to run out and spend my hard earned cash on the CD. It wasn't until I
   saw a used copy at a Cash Converters two years later that I heard the whole
   and album and realized how much I like it. Today I would stream it on Spotify
-  immediately.]
+  immediately and the whole process would play out much faster.]
   
 - *The Sophtware Slump* by **Grandaddy** - Not a happy record. A haunting,
   psychedelic cycle of songs that feels like the overture to the pervasive
@@ -143,7 +143,7 @@ current day that I really don't care for anymore.
   became a thing around 2006.]
 
 - *Kid A* by **Radiohead** - I like the actual songs here more than the
-  meandering instrumentals, which haven't aged very well. This layed the
+  meandering instrumentals, which haven't aged very well. This set the
   blueprint for a decade of layered electronic indie. [*Memory*: At the time I
   didn't like this very much in comparison to the more rock forward sound of
   **The Bends**, but I have grown to appreciate it over time.]
