--- a/src/music/1995.rst
+++ b/src/music/1995.rst
@@ -8,7 +8,7 @@ back to the sounds of the 60s and 70s and could barely care about the hits of
 the day. The year that I started high school, I was way more interested in
 classic rock radio than I was the modern rock most of my peers were listening
 to. I missed some classic records that I would only discover in retrospect,
-including my favorites below.+
+including my favorites below.
 
 .. image:: images/1995.jpg
   :width: 900
@@ -48,7 +48,7 @@ including my favorites below.+
   current age. This is "art installation music" and modernist in that very 1990s
   kind of way. This is the music of the early internet age. It is also still
   very much a **David Bowie** record, and a great one at that. I didn't really
-  connect with this as much as his classic work back then, but not believe it to
+  connect with this as much as his classic work back then, but now believe it to
   stand among his very finest work. [*Memory*: In the late 90s I was a huge
   Bowie fan, and I worked with another "music person" who only really liked this
   record of his. We listened to it a bunch back then at work, but I just didn't
@@ -73,7 +73,7 @@ including my favorites below.+
   with the crowd. This is almost universally considered their masterpiece. I
   like it, but it is a little too long. There is a great single album here, but
   not everything needed to make the cut. I think the albums before an after are
-  sharper statements, and have better focus in the playful and more series
+  sharper statements, and have better focus in the playful and more serious
   sounds that proceeded and followed this one. That said, It is a still another
   great record that I enjoy listening to, just not as much as those others.
   [*Memory*: There was a used copy of this that sat on the counter at City
@@ -102,12 +102,13 @@ including my favorites below.+
 
 - *Ocean Beach* by **Red House Painters** - I always feel a little guilty that I
   don't like the music that Mike Kozelek made after he got his life together, as
-  what he was doing in his darker moments. That said, this pleasant airy folk
-  rock record holds up well to his earlier work. Maybe it is because there is
-  just enough melancholy in tracks like "Summer Dress". [*Memory*: In 2009 I
-  spent some time as a tourist in San Francisco after a business trip to the
-  region. I decided to do a "Red House Painters Walking Tour" where I visited
-  all the places he name checked in the albums/songs, including Ocean Beach.]
+  much as I like what he was doing in his darker moments. That said, this
+  pleasant airy folk rock record holds up well to his earlier work. Maybe it is
+  because there is just enough melancholy in tracks like "Summer Dress".
+  [*Memory*: In 2009 I spent some time as a tourist in San Francisco after a
+  business trip to the region. I decided to do a "Red House Painters Walking
+  Tour" where I visited all the places he name checked in the albums/songs,
+  including Ocean Beach.]
 
 - *Mellon Collie and the Infinite Sadness* by **Smashing Pumpkins** - [**1995
   FAVORITE**] - There have been quite a few bands in history that for a brief
